--- a/code/notes/part_5/歧义句及其可辨别性.md
+++ b/code/notes/part_5/歧义句及其可辨别性.md
@@ -138,7 +138,7 @@
 #### 3.2 分析与思考
 尽管上面的例子严格来说不属于歧义句，但从这个例子可以看出，一句句子的两种理解往往呈现竞争关系，且成立的概率十分接近。一个助词或词语的替换，就有可能引发连锁反应，导致其中一种理解反败为胜。当然，歧义句中也存在这个现象，比如在之前我们已经讨论过，词语层面的歧义句，其理解方式往往和句意强相关，而和语法结构弱相关。
 
-因此，对于歧义句，不存在一种通用的辨别方式，只能是具体问题具体分析。然而我们遗憾地看到，许多日语教程只是帮助学习者把某一句话看懂就万事大吉，而没有从全局的角度提示出歧义句的复杂性，从而给学习者造成了歧义句一定可以辨别的错觉。
+因此，对于歧义句，不存在一种通用的辨别方式，只能是具体问题具体分析。然而我们遗憾地看到，许多日语教程只是帮助学习者把某一句话看懂就万事大吉，而没有从全局的角度提示出歧义句的复杂性，从而给学习者造成了“只要语法正确，句意就明确”的错觉。
 
 ### 4 小结
 
