--- a/code/notes/part_5/歧义句及其可辨别性.md
+++ b/code/notes/part_5/歧义句及其可辨别性.md
@@ -124,7 +124,7 @@
 
 ### 3 句意的不稳定性
 
-#### 3.1 「は」「が」和句子的理解
+#### 3.1 「は」「が」对句意的影响
 值得注意的是，「は」「が」存在微妙的区别。「は」可以管整句句子的主语，而「が」通常只管一个分句，因此把「は」「が」互换可能会造成句意的变化。
 
 > （10）娘**は**風を引いたので、会社を休んだ。
@@ -135,8 +135,29 @@
 > 因为女儿感冒了，所以**她**请了假。
 > 因为女儿感冒了，所以**我**请了假。
 
-#### 3.2 分析与思考
-尽管上面的例子严格来说不属于歧义句，但从这个例子可以看出，一句句子的两种理解往往呈现竞争关系，且成立的概率十分接近。一个助词或词语的替换，就有可能引发连锁反应，导致其中一种理解反败为胜。当然，歧义句中也存在这个现象，比如在之前我们已经讨论过，词语层面的歧义句，其理解方式往往和句意强相关，而和语法结构弱相关。
+#### 3.2 主语省略对句意的影响
+我们构造以下两句句子：
+> （12-1）数学が苦手だが、数学者になりたい人を理解している。
+> （12-2）数学が苦手であっても、数学者になりたい人を理解している。
+
+从纯语法的角度来看，以12-1为例，这句句子有两种拆分方式，配合主语省略，存在两种不同的理解。同理，12-2也有两种不同的理解。
+> ①（数学が苦手だが）、数学者になりたい人を理解している。
+> （我）虽然不擅长数学，但理解想成为数学家的人。
+> ②（数学が苦手だが、数学者になりたい人）を理解している。
+> （我）理解那些 虽然不擅长数学，但还是想成为数学家的人。
+
+第一种理解中不擅长数学的是我，而第二种理解中是其他人，句意明显不同。
+
+不过，从句意角度分析，我们仍可以从蛛丝马迹中得到它们的默认意思。一般来说，“我是否擅长数学”属于已经确定的事实，因此需要使用“虽然但是”这种条件确定的逆接，即「が」；而“别人”在这句话中为假想的人群，因此“别人是否擅长数学”属于假定条件，需要使用“即使也”这种让步式的逆接，即「ても/でも」。因此，12-1默认是第一种意思，而12-2默认是第二种意思。
+
+由此可见，这句话的句意是不稳定的——我们仅仅替换了一个接续助词就导致句意发生了极大的变化。为了消除歧义，我们也可以尝试还原被省略的主语。
+>（12-3）**私は**数学が苦手だが、数学者になりたい人を理解している。
+>（12-4）数学が苦手であっても、数学者になりたい人を、**私は**理解している。
+
+同前一节所述，12-3句首的「私は」可以管住整句话的主语，因此只能是第一种意思。而12-4句中的「私は」则只管后半句的主语，因此只能是第二种意思。通过添加主语，句子的歧义性显著降低。
+
+#### 3.3 分析与思考
+尽管上面的例子严格来说不完全属于歧义句，但从这些例子可以看出，一句句子的两种理解往往呈现竞争关系，且成立的概率十分接近。一个助词或词语的替换，就有可能引发连锁反应，导致其中一种理解反败为胜。当然，歧义句中也存在这个现象，其理解方式往往和句意强相关，而和语法结构弱相关。
 
 因此，对于歧义句，不存在一种通用的辨别方式，只能是具体问题具体分析。然而我们遗憾地看到，许多日语教程只是帮助学习者把某一句话看懂就万事大吉，而没有从全局的角度提示出歧义句的复杂性，从而给学习者造成了“只要语法正确，句意就明确”的错觉。
 
