--- a/code/notes/part_5/致日语业余学习者的第一封信.md
+++ b/code/notes/part_5/致日语业余学习者的第一封信.md
@@ -1,5 +1,5 @@
 
-# 致日语业余学习者的一封信
+# 致日语业余学习者的第一封信
 
 > 本文由 ![krc](https://notes.sjtu.edu.cn/uploads/upload_229d89e80256c231d57ddff4886844b2.png =20x)**楠风研究部** 整理编写
 <a href="https://notes.sjtu.edu.cn/s/79qiYbtis"><img src="https://notes.sjtu.edu.cn/uploads/upload_229d89e80256c231d57ddff4886844b2.png" alt="krc" width="24"/> 首页</a>
@@ -28,10 +28,10 @@
 
 &emsp;&emsp;看到“闪闪发光、心动不已”这个概念时，我感到非常兴奋，因为我确信这就是自己学习日语最理想的心境——前者代表着新奇，而后者则代表着悸动。还记得我捧起日语书学习第一课的那个夏天，虽然当时一句很简单的句子都要磕磕绊绊才能读完，但学完一课时的成就感，以及对后续学习内容的好奇与期待，这些心情都是难以言表的。然而，随着学习的深入，我发现自己虽然在语言方面的疑惑越来越少，但在学习动机方面的疑虑却越来越多，在各种言论的冲击下，我似乎忘记了学习的初心。
 
-&emsp;&emsp;我们学习日语的初衷，或许并不是为了达到某个所谓的“标准”，而是为了那份“闪闪发光、心动不已”的感觉。它可能是一首日文歌的旋律，一部动漫的台词，一段与日本朋友的有趣对话，又或者是对日本文化的深深向往。这些都是我们学习的动力，也是我们坚持下去的理由。
+&emsp;&emsp;我们学习日语的初衷，或许并不是为了达到某个所谓的“标准”，而是为了那份“闪闪发光、心动不已”的感觉。它可能是一首日文歌的旋律，一部动漫的台词，一段与日本朋友的有趣对话，又或者是对日本文化的向往。这些都是我们学习的动力，也是我们坚持下去的理由。
 
 &emsp;&emsp;因此，我想对你说：拒绝“闷闷不乐、焦躁不安”，追寻“闪闪发光、心动不已”，保持最初的那份新奇与悸动，期待未来的无限可能。或许这才是对业余爱好者最友好的心态。不要被外界的评价所左右，去感受学习带给你的每一份快乐和满足。
 
 &emsp;&emsp;最后，愿你在学习日语的过程中，不仅能提高语言能力，更能找到属于自己的“星之律动”，邂逅比语言本身更有价值的事物。
 
-<div style="text-align: right;"><br>与你同行的日语学习者<br>牧 楠风<br>2025年3月20日<br>于七色区江畔<br></div>
+<div style="text-align: right;"><br>与你同行的日语学习者<br>牧 楠风<br>2025年3月20日<br>于七色区木浦江畔<br></div>
