--- a/code/notes/part_5/致日语业余学习者的第二封信.md
+++ b/code/notes/part_5/致日语业余学习者的第二封信.md
@@ -23,6 +23,6 @@
 
 &emsp;&emsp;然而，作为业余学习者，没有了现实的压力，我认为学习日语不应该有这么强的目的性。相反，应该多一些别人眼中的“疯狂”。日语当然是一种交流和表达的工具，但它的内涵绝不仅仅是一种工具。你可以把它看成一门学问，挖掘语法的规律；你可以把它当作文化的载体，通过原汁原味的名著感受另一种文化；你可以把它视为一种解谜游戏，探索古典日语的奥秘；你也可以把它看作颜料和调色板，创作属于自己的作品……我们完全可以用自己丰富的想象力和创造力，去创造属于我们自己的青春色彩。
 
-&emsp;&emsp;“快乐胜于流利”，这是我在学习过程中一直坚持，也想继续坚持下去的信念。也愿你在学习日语的过程中，留下属于自己的美好回忆。
+&emsp;&emsp;“快乐胜于流利”，这是我在学习日语时一直坚持的信念。愿你在学习的旅途中，找到属于自己的“青春18车票”，绘制出独一无二的青春色彩，留下美好的回忆。
 
 <div style="text-align: right;"><br>与你同行的日语学习者<br>牧 楠风<br>2025年5月24日<br>于七色区木浦江畔<br></div>
