--- a/code/notes/part_5/致日语业余学习者的第二封信.md
+++ b/code/notes/part_5/致日语业余学习者的第二封信.md
@@ -9,7 +9,7 @@
 
 亲爱的日语学习者：
 
-&emsp;&emsp;在日本，有一种叫做“青春18车票”的优惠火车票，可以在一天内无限次乘坐JR线全线的普通列车和快速列车，但原则上不能坐新干线、特急、急行等更快的列车。因此，从东京到大阪，新干线只需两三小时的车程，使用青春18车票则需要坐上大半天，对时间和体力都是极大的考验。尽管这种车票不限使用者的年龄，但无论从名字还是使用特点来说，似乎都体现出青春时期的“疯狂”感。
+&emsp;&emsp;在日本，有一种叫做“青春18车票”的优惠火车票，可以在一天内无限次乘坐JR线全线的普通列车和快速列车，但原则上不能坐新干线、特急、急行等更快的列车。因此，从东京到大阪，新干线只需两三小时的车程，使用青春18车票则需要坐上大半天，对时间和体力都是极大的考验。尽管这种车票不限使用者的年龄，但从名字到使用特点，都充满了青春时期的“疯狂”气息。
 
 &emsp;&emsp;青春时代的我们，总是喜欢随心而动、异想天开，设计出许多别出心裁的计划，而不用考虑它有没有“意义”。
 
@@ -19,9 +19,9 @@
 
 &emsp;&emsp;而步入社会后，人们总是追求着“理性”和“效率”。从每个工作日的早高峰尽力挤上地铁，到工作中想方设法尽快完成各类任务和指标，再到怎么快速赚钱以实现“幸福的人生”……人们已经被现实的重担压得喘不过气，再也没有精力，也没有心情去实现那些“疯狂”的想法——青春18车票已经不再属于自己，新干线才是理性和高效的选择。
 
-&emsp;&emsp;或许正因为如此，人们在回顾自己的人生时，总是倾向于那段青春与疯狂的岁月。人生如此，学习日语又何尝不是如此。大多数学习者把日语作为谋生的工具，也不得不抱着“理性”的态度，做最有“意义”的事情。于是，日语完完全全是一种工具，口语表达也成为了学习的唯一目标和标准。更有甚者直接把通过考试当成终极目标，沉迷于各种蒙题技巧，连日语本身都不屑于学好。
+&emsp;&emsp;或许正因为如此，人们在回顾自己的人生时，最乐于提起的总是那段青春与疯狂的岁月。人生如此，学习日语又何尝不是如此。大多数学习者把日语作为谋生的工具，也不得不抱着“理性”的态度，做最有“意义”的事情。于是，日语完完全全是一种工具，口语表达也成为了学习的唯一目标和标准。更有甚者直接把通过考试当成终极目标，沉迷于各种蒙题技巧，连日语本身都不屑于学好。
 
-&emsp;&emsp;然而，作为业余学习者，没有了现实的压力，我认为学习日语不应该有这么强的目的性。相反，应该多一些别人眼中的“疯狂”。日语当然是一种交流和表达的工具，但它的内涵绝不仅仅是一种工具。你可以把它看成一门学问，挖掘语法的规律；你可以把它当作文化的载体，通过原汁原味的名著感受另一种文化；你可以把它视为一种解谜游戏，探索古典日语的奥秘；你也可以把它看作颜料和调色板，创作属于自己的作品……我们完全可以用自己丰富的想象力和创造力，去创造属于我们自己的青春色彩。
+&emsp;&emsp;然而，作为业余学习者，没有了现实的压力，我认为学习日语不应该有这么强的目的性。相反，应该多一些别人眼中的“疯狂”。日语当然是一种交流和表达的工具，但它的内涵绝不仅仅是一种工具。你可以把它看成一门学问，挖掘语法的规律；你可以把它当作文化的载体，通过原汁原味的名著感受另一种文化；你可以把它视为一种解谜游戏，探索古典日语的奥秘；你也可以把它看作颜料和调色板，创作属于自己的作品……我们完全可以用自己丰富的想象力和创造力，为学习日语增添青春的“疯狂”色彩。
 
 &emsp;&emsp;“快乐胜于流利”，这是我在学习日语时一直坚持的信念。愿你在学习的旅途中，找到属于自己的“青春18车票”，绘制出独一无二的青春色彩，留下美好的回忆。
 
