--- a/code/notes/part_4/N4四大坑.md
+++ b/code/notes/part_4/N4四大坑.md
@@ -144,7 +144,7 @@
 
 一般情况下这样解释没有意义，因此是错误的句子。不过，在极端情况下这样也可以解释得通。比如，你参加了一个综艺节目，里面有一个小游戏。游戏规则是，只要有任何人感动了，就算挑战失败，全组都要接受惩罚。于是，节目组给你们看很多感人的电影。终于，有一个人感动得落泪了，因此全组都要受到惩罚。在这种极其特殊的情况下，他的感动对你确实是有害的。
 
-不过，也有学者指出，受害被动只能用于以下4个动词：
+不过，也有学者指出，非意志动词的受害被动只能用于以下4个动词：
 （本小段内容参考：[间接被动的特例](https://www.bilibili.com/video/BV1fTmaY5Ebm/)）
 * 降る → 降られる（雨）
 * 打つ → 打たれる（雨）
